--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .App {
   border: 1px solid green;
-  padding: 2rem;
+  padding: 2rem 2px;
   border-radius: 8px;
   box-shadow: 0 0 12px darkgreen;
   display: flex;
@@ -23,5 +23,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  gap: 20px;
+  gap: 8px;
+}
+
+@media (min-width: 480px) {
+  .App {
+    padding: 2rem;
+  }
+  .container {
+    gap: 20px;
+  }
 }
