--- a/src/components/Block.css
+++ b/src/components/Block.css
@@ -2,7 +2,7 @@
     border: 2px solid green;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 3fr 1fr;
     box-shadow: 0 0 8px darkgreen;
 }
 
@@ -10,7 +10,8 @@
     grid-column: 1/2;
     grid-row: 1/2;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     border-bottom: 1px solid green;
 }
 
@@ -29,4 +30,16 @@
     grid-row: 2/3;
     text-align: center;
     font-size: 1rem;
+}
+
+@media (min-width: 480px) {
+    .block {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    }
+   .currency-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    } 
 }
